kubernetes/alb-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contactform
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
  - host: form.classof25.online
    http:
      paths: 
      - pathType: Prefix
        path: /
        backend:
          service:
            name: php-app-service
            port:
              number: 80
  
  - host: sql.classof25.online
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 8081
